Time Tracker Developer Org/src/objects/Config_Settings_Table_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>API_Name__c</fullName>
        <description>Holds the API name of the field of Config Custom Settings.</description>
        <inlineHelpText>API name of the field of Config Custom Settings.</inlineHelpText>
        <label>API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checkbox_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Holds TRUE if the field type is Checkbox, otherwise, FALSE</description>
        <inlineHelpText>Mark this if the field type is Checkbox.</inlineHelpText>
        <label>Checkbox Field?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Column_Number__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Holds the Order of the Column; needs to be unique within the type of Custom Settings.</description>
        <inlineHelpText>Column Sequence Number</inlineHelpText>
        <label>Column Number</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Holds the Description of the column of Custom Settings Table.</description>
        <inlineHelpText>State the purpose or description of the Column of Custom Settings Table.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Display__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Holds TRUE if the field is to be displayed, otherwise, FALSE.</description>
        <inlineHelpText>Mark this if this needs to be displayed.</inlineHelpText>
        <label>Display?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <description>Holds the Label of the column of Custom Settings Table.</description>
        <inlineHelpText>Column Name of Custom Settings Table.</inlineHelpText>
        <label>Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Custom Event</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Object Settings</fullName>
                </value>
                <value>
                    <fullName>Strategy</fullName>
                </value>
                <value>
                    <fullName>URLPattern</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Used__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Holds TRUE if the field is used, otherwise, FALSE</description>
        <inlineHelpText>Mark this field if it is used.</inlineHelpText>
        <label>Used?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Width__c</fullName>
        <description>Holds the width of the Column</description>
        <inlineHelpText>The width of the Column in &quot;rem&quot;.</inlineHelpText>
        <label>Width</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>Config Settings Table Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Custom_Events</fullName>
        <columns>NAME</columns>
        <columns>Label__c</columns>
        <columns>API_Name__c</columns>
        <columns>Column_Number__c</columns>
        <columns>Width__c</columns>
        <columns>Checkbox_Field__c</columns>
        <columns>Display__c</columns>
        <columns>Used__c</columns>
        <columns>Description__c</columns>
        <columns>Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Custom Event</value>
        </filters>
        <label>Custom Events</label>
    </listViews>
    <listViews>
        <fullName>Manual</fullName>
        <columns>NAME</columns>
        <columns>Label__c</columns>
        <columns>API_Name__c</columns>
        <columns>Column_Number__c</columns>
        <columns>Width__c</columns>
        <columns>Checkbox_Field__c</columns>
        <columns>Display__c</columns>
        <columns>Used__c</columns>
        <columns>Description__c</columns>
        <columns>Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Manual</value>
        </filters>
        <label>Manual</label>
    </listViews>
    <listViews>
        <fullName>Object_Settings</fullName>
        <columns>NAME</columns>
        <columns>Label__c</columns>
        <columns>API_Name__c</columns>
        <columns>Column_Number__c</columns>
        <columns>Width__c</columns>
        <columns>Checkbox_Field__c</columns>
        <columns>Display__c</columns>
        <columns>Used__c</columns>
        <columns>Description__c</columns>
        <columns>Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Object Settings</value>
        </filters>
        <label>Object Settings</label>
    </listViews>
    <listViews>
        <fullName>Strategy</fullName>
        <columns>NAME</columns>
        <columns>Label__c</columns>
        <columns>API_Name__c</columns>
        <columns>Column_Number__c</columns>
        <columns>Width__c</columns>
        <columns>Checkbox_Field__c</columns>
        <columns>Display__c</columns>
        <columns>Used__c</columns>
        <columns>Description__c</columns>
        <columns>Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Strategy</value>
        </filters>
        <label>Strategy</label>
    </listViews>
    <listViews>
        <fullName>URLPattern</fullName>
        <columns>NAME</columns>
        <columns>Label__c</columns>
        <columns>API_Name__c</columns>
        <columns>Column_Number__c</columns>
        <columns>Width__c</columns>
        <columns>Checkbox_Field__c</columns>
        <columns>Display__c</columns>
        <columns>Used__c</columns>
        <columns>Description__c</columns>
        <columns>Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>URLPattern</value>
        </filters>
        <label>URLPattern</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>CSTC Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Config Settings Table Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>